# mica

./: CMakeLists.txt  Doxyfile.in  README.md
app/: event-viewer.cc  mica.cc  multimica.cc
include/mica/: AnalyserBase.hh  AnalyserFactory.hh  AnalyserGroup.hh  AnalyserTofTracker.hh  AnalyserTrackerAngularMomentum.hh  AnalyserTrackerChannelHits.hh  AnalyserTrackerKFMomentum.hh  AnalyserTrackerKFStats.hh  AnalyserTrackerMC.hh  AnalyserTrackerMCPRResiduals.hh  AnalyserTrackerMCPurity.hh  AnalyserTrackerPREfficiency.hh  AnalyserTrackerPRSeedNPEResidual.hh  AnalyserTrackerPRSeedResidual.hh  AnalyserTrackerPRStats.hh  AnalyserTrackerSpacePointSearch.hh  AnalyserTrackerSpacePointSearchStation.hh  AnalyserTrackerSpacePoints.hh  AnalyserViewerRealSpace.hh  CutsBase.hh  CutsTOFTime.hh  IAnalyser.hh
scripts/: multithread.py
src/: AnalyserBase.cc  AnalyserFactory.cc  AnalyserGroup.cc  AnalyserTofTracker.cc  AnalyserTrackerAngularMomentum.cc  AnalyserTrackerChannelHits.cc  AnalyserTrackerKFMomentum.cc  AnalyserTrackerKFStats.cc  AnalyserTrackerMC.cc  AnalyserTrackerMCPRResiduals.cc  AnalyserTrackerMCPurity.cc  AnalyserTrackerPREfficiency.cc  AnalyserTrackerPRSeedNPEResidual.cc  AnalyserTrackerPRSeedResidual.cc  AnalyserTrackerPRStats.cc  AnalyserTrackerSpacePointSearch.cc  AnalyserTrackerSpacePointSearchStation.cc  AnalyserTrackerSpacePoints.cc  AnalyserViewerRealSpace.cc  CutsBase.cc  CutsTOFTime.cc  IAnalyser.cc
